Fixed about page same problem with clip-path on firefox

--- a/css/main.css
+++ b/css/main.css
@@ -172,6 +172,7 @@ h2{
     height: 100px;
     background: rgb(51,49,49);
     -webkit-clip-path: polygon(0 0, 0% 50%, 100% 0%);
+    clip-path: polygon(0 0, 0% 50%, 100% 0%);
     z-index: 1;
 }
 .hair:after{
@@ -183,6 +184,7 @@ h2{
     height: 49px;
     background: rgb(51,49,49);
     -webkit-clip-path: polygon(0 0, 80% 100%, 80% 0%);
+    clip-path: polygon(0 0, 80% 100%, 80% 0%);
     z-index: 1;
 }
 .sense{
